--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    background-color: beige;
 }
 section{
     height: 500px;
     padding-bottom: 150px;
 }
 .top-banner{
-    background-image: url("images/top-banner.png");
+    background-image: url("");
     background-repeat: no-repeat;
 }
 .half-width{
@@ -16,6 +17,13 @@ section{
     margin-left: 5%;
     padding-left: 2%;
 }
+
+
+.half-width img {
+    background-color:black;
+    padding: 10px;
+}
+
 h1{
     font-size: 50px;
 }
@@ -37,18 +45,28 @@ p{
     color: dimgray;
 }
 .dream-area{
-    background-image: url("images/dream-bg.png");
+    background-image: url("");
     background-repeat: no-repeat;
     background-position: right;
+    background-color: brown;
 }
 h2{
     font-size: 40px;
 }
 .experience-area{
-    background-image: url("images/exp-bg.png");
+    background-image: url(``);
     background-repeat: no-repeat;
     background-position: left;
 }
+
+.experience-area h2{
+    font-size: 40px;
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+
 .experience-area h3{
     color: orange;
 }
@@ -59,12 +77,16 @@ h2{
 }
 #full-stack{
     border-left: 7px solid tomato;
+    background-color: blanchedalmond;
 }
 #baby-web{
     border-left: 7px solid;
     border-image: linear-gradient(blue 100%, cyan 100%);
     border-image-slice: 1;
+    background-color:blanchedalmond;
 }
+
 footer p{
     text-align: center;
+    font-weight: bold;
 }
